usuario mysql main alterado e css

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
- /* background-image: url("imagens/vacina02.jpg");  */
+    background-image: url("imagens/vacina02.jpg");
     background-size: cover;       
     background-position: center;  
     background-repeat: no-repeat; 
